Fix bug 351145 - Selected entry not readable in unifinder or task list due to text/background color combination (if focus is moved away). r=philipp

--- a/calendar/base/themes/pinstripe/calendar-unifinder.css
+++ b/calendar/base/themes/pinstripe/calendar-unifinder.css
@@ -52,10 +52,6 @@
     border-bottom: 1px dotted #AAA;
 }
 
-#unifinder-search-results-tree > treechildren::-moz-tree-cell-text(selected) {
-    color: HighlightText;
-}
-
 /* workaround to avoid Window Flick */
 #unifinder-search-results-tree {
    /* increased to display scrollbar and at least 2 lines */
